--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,15 @@
         "php": ">=5.4.0",
         "illuminate/support": "4.1.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "autoload": {
-        "classmap": [
-            "src/migrations"
-        ],
         "psr-0": {
             "JoshuaJabbour\\Authorizable\\": "src/"
+        },
+        "psr-4": {
+            "JoshuaJabbour\\Authorizable\\Tests\\": "tests"
         }
     },
     "minimum-stability": "stable"
