Switch to PSR-4 autoloading.

--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,8 @@
         "phpunit/phpunit": "3.7.*"
     },
     "autoload": {
-        "psr-0": {
-            "JoshuaJabbour\\Authorizable\\": "src/"
-        },
         "psr-4": {
+            "JoshuaJabbour\\Authorizable\\": "src",
             "JoshuaJabbour\\Authorizable\\Tests\\": "tests"
         }
     },
