--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "illuminate/support": "4.1.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "4.0.*",
+        "mockery/mockery": "0.9.*"
     },
     "autoload": {
         "psr-4": {
